# Visual-Research-Assistant-Multimodal-Agentic-RAG

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: ci.yml  integration.yml
.streamlit/: config.toml
config/: logging_config.py  settings.py
examples/: demo_questions.md
scripts/: make_demo_assets.py  pull_models.ps1  pull_models.sh  smoke_test.py
src/agents/: critique.py  generator.py  graph.py  prompts.py  retriever_node.py  router.py  schemas.py  state.py
src/ingestion/: chunker.py  image_extractor.py  pdf_partitioner.py  pipeline.py  summarizer.py  validators.py
src/llm/: health.py  ollama_client.py
src/retrieval/: docstore.py  multi_vector.py  vector_store.py
src/ui/: app.py  session.py  styles.py
src/ui/components/: chat.py  header.py  sidebar.py  trace_view.py
src/utils/: errors.py  hashing.py  image_io.py  logging.py
tests/: conftest.py
tests/e2e/: test_canonical_questions.py
tests/integration/: test_graph_loop.py  test_ingestion.py  test_retriever.py
tests/unit/: test_chunker.py  test_citations.py  test_critique_schema.py  test_hashing.py  test_should_retry.py  test_state.py  test_validators.py
