[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-research-assistant"
version = "0.1.0"
description = "Multimodal Agentic RAG with LangGraph, self-correction, and multi-vector retrieval."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # Black handles line length

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "unstructured.*",
    "chromadb.*",
    "fitz",
    "pdf2image",
    "magic",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
markers = [
    "unit: fast unit tests, no network",
    "integration: requires Ollama + Chroma",
    "e2e: full-stack scenarios with real models",
]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
